--- a/css/styles.css
+++ b/css/styles.css
@@ -3,7 +3,8 @@ body {
 }
 
 .hero {
-    background-color: #f8f9fa;
+    /* background-color: #f8f9fa; */
+    background-image: url('../images/hero.jpg');
     padding: 80px 0;
     text-align: center;
 }
