--- a/css/styles.css
+++ b/css/styles.css
@@ -1,13 +1,36 @@
 body {
-    padding-top: 60px;
+    margin: 0;
+}
+
+h1, h2, h3, p {
+    margin-top: 0;
 }
 
 .hero {
-    /* background-color: #f8f9fa; */
     background-image: url('../images/hero.jpg');
-    padding: 80px 0;
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+    padding: 160px 0;
     text-align: center;
+    position: relative;
+    color: white;
 }
+
+.hero::before {
+    content: "";
+    position: absolute;
+    top: 0; left: 0;
+    width: 100%; height: 100%;
+    background-color: rgba(0, 0, 0, 0.8);  /* Negro con 50% de opacidad */
+    z-index: 1;
+}
+
+.hero > .container {
+    position: relative;
+    z-index: 2;
+}
+
 
 .section-title {
     margin-top: 40px;
